syntax = "proto3";

package secretsservice;

option go_package = "github.com/kurs0n/SecretsService/proto;secretsservice";

service SecretsService {
    rpc ListRepos (ListReposRequest) returns (ListReposResponse);
}

message ListReposRequest {
    string access_token = 1;
}
 
message ListReposResponse {
    repeated Repo repos = 1;
    string error = 2;
}

message Repo {
    int64 id = 1;
    string name = 2;
    string full_name = 3;
    string html_url = 4;
    string description = 5;
    bool private = 6;
    string owner_login = 7;
    string owner_avatar_url = 8;
}
